--- a/HTMLpractice.html
+++ b/HTMLpractice.html
@@ -1,4 +1,4 @@
-<a href = "file:////Users/hoseongchae/Desktop/codingStudy/HTML/index.html">Naming sequence</a>
+<a href = "www.naver.com">Naming sequence</a>
 <p>What is your name?</p>
 <p style="margin-top:90px;">My name is Hoseongs</p>
 
